Adicionando link na logo
Link que direciona para a pagina da Games Credits

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     <div class="container px-4 container1">
       <!-- Logo -->
       <div class="text-center">
-        <img
-          class="img-fluid topLogo mt-4"
-          src="./images/Logo.png"
-          alt="Logo Games Credits"
-        />
+        <a href="https://tomazbontempo.github.io/Gamescredit/">
+          <img
+            class="img-fluid topLogo mt-4"
+            src="./images/Logo.png"
+            alt="Logo Games Credits"
+          />
+        </a>
       </div>
 
       <!-- Form's first area -->
